# Aspect

./: .gitignore  Aspect.vcxproj  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  README.md  build.bat  tokenize.ap
Aspect/: Compiler.c  Executor.c  apcore__cli.c  apcore__filemanager.c  cli.c  filemanager.c  initializer.c
Grammar/: Keywords.c  Tokens.c  keywords.c  tokens.c
Include/: Aspect.h  CharLexer.h  Compiler.h  Executor.h  Keywords.h  Parser.h  Tokens.h  aspect.h  cli.h  filemanager.h  initializer.h  lexer.h  parser.h
Include/Internal/: apcore__cli.h
Lib/: cJSON.c
Parser/: Parser.c  parser.c
Parser/Lexer/: CharLexer.c  FileLexer.c  lexer.c
Programs/: aspect.c
include/: Keywords.h  aspect.h  cli.h  filemanager.h  initializer.h  keywords.h  lexer.h  parser.h  tokens.h
internal/: cli.c  filemanager.c  initializer.c
lib/: cJSON.c
parser/: parser.c
parser/lexer/: lexer.c
programs/: aspect.c
src/: Aspect.sln  Aspect.vcxproj  Aspect.vcxproj.filters  main.cpp
syntax/: keywords.c  tokens.c
